<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/page_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:textSize="@dimen/text_size"
        android:text="@string/page_number_game_4" />

    <ImageView
        android:id="@+id/previous"
        android:contentDescription="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/page_number"
        android:src="@drawable/navigation_previous_item" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/text_padding"
        android:layout_centerVertical="true"
        android:text="@string/help_game_fragment_3"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/page_number"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="@dimen/enjoy_height"
        android:text="@string/enjoy"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignBaseline="@+id/page_number"
        android:layout_alignBottom="@+id/page_number"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/back"
        android:onClick="backToMenu" />

    <TextView
        android:id="@+id/title"
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/title_height"
        android:text="@string/help_game_u"
        android:textStyle="bold"
        android:textSize="@dimen/text_size" />

</RelativeLayout>
