<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleMode"
        android:layout_alignBottom="@+id/toggleMode"
        android:layout_alignParentLeft="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <ToggleButton
        android:id="@+id/toggleMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textOff="@string/straightOff"
        android:textOn="@string/straightOn" />
    
</RelativeLayout>