<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title"
        style="?android:textAppearanceLarge"
        android:layout_marginTop="@dimen/title_height_learning_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/help_learning_u"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/page_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:textSize="@dimen/text_size"
        android:text="@string/page_number_learning_6" />

    <ImageView
        android:id="@+id/previous"
        android:contentDescription="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/page_number"
        android:src="@drawable/navigation_previous_item" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/text_padding"
        android:text="@string/help_learning_fragment_5_0"
        android:textSize="@dimen/text_size" />
    
    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignBaseline="@+id/page_number"
        android:layout_alignBottom="@+id/page_number"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/back"
        android:onClick="backToMenu" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/text_padding"
        android:layout_below="@+id/imageView2"
        android:text="@string/help_learning_fragment_5_2"
        android:textSize="@dimen/text_size" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView02"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/text_padding"
        android:contentDescription="@string/help_learning"
        android:src="@drawable/progress_bar2_only" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/text_padding"
        android:layout_below="@+id/imageView3"
        android:text="@string/help_learning_fragment_5_3"
        android:textSize="@dimen/text_size" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/text_padding"
        android:layout_below="@+id/TextView03"
        android:contentDescription="@string/help_learning"
        android:src="@drawable/progress_bar3_only" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/text_padding"
        android:contentDescription="@string/help_learning"
        android:src="@drawable/progress_bar0_only" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/imageView1"
        android:text="@string/help_learning_fragment_5_1"
        android:textSize="@dimen/text_size" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/text_padding"
        android:layout_below="@+id/TextView01"
        android:contentDescription="@string/help_learning"
        android:src="@drawable/progress_bar1_only" />

</RelativeLayout>
